# whisper.cpp-playground

./: .gitignore  CMakeLists.txt  README.md  README.original.md  command.txt  local-build.cmd
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: main.cpp
audio/: CMakeLists.txt
audio/include/: common-sdl.h
common/: CMakeLists.txt
common/src/: common.cpp
ggml-helper/: CMakeLists.txt
ggml-helper/src/: common-ggml.cpp
gpt-2/: CMakeLists.txt
gui/: CMakeLists.txt
src/: main.cpp
